// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor Page snapshots props besides blockType default to null 1`] = `
<Provider
  store={
    {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <ErrorBoundary
    learningContextId={null}
    studioEndpointUrl={null}
  >
    <EditorContextProvider
      fullScreen={true}
    >
      <Editor
        blockId={null}
        blockType="html"
        lmsEndpointUrl={null}
        onClose={null}
        returnFunction={null}
        studioEndpointUrl={null}
      />
    </EditorContextProvider>
  </ErrorBoundary>
</Provider>
`;

exports[`Editor Page snapshots rendering correctly with expected Input 1`] = `
<Provider
  store={
    {
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
      Symbol(Symbol.observable): [Function],
    }
  }
>
  <ErrorBoundary
    learningContextId="course-v1:edX+DemoX+Demo_Course"
    studioEndpointUrl="fakeurl.com"
  >
    <EditorContextProvider
      fullScreen={true}
      learningContextId="course-v1:edX+DemoX+Demo_Course"
    >
      <Editor
        blockId="block-v1:edX+DemoX+Demo_Course+type@html+block@030e35c4756a4ddc8d40b95fbbfff4d4"
        blockType="html"
        learningContextId="course-v1:edX+DemoX+Demo_Course"
        lmsEndpointUrl="evenfakerurl.com"
        onClose={[MockFunction props.onClose]}
        returnFunction={null}
        studioEndpointUrl="fakeurl.com"
      />
    </EditorContextProvider>
  </ErrorBoundary>
</Provider>
`;
